api-resources/default/a21ab98b-9c9a-48bc-a41f-7d752061c1d0/1/default_a21ab98b-9c9a-48bc-a41f-7d752061c1d0_v1_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  creationTimestamp: null
  name: petstore
spec:
  hostnames:
  - petstore.io
  parentRefs:
  - name: external
    namespace: gateway-system
  rules:
  - matches:
    - method: GET
      path:
        type: Exact
        value: /cat
  - matches:
    - method: POST
      path:
        type: Exact
        value: /cat
  - matches:
    - method: GET
      path:
        type: Exact
        value: /dog
  - matches:
    - method: POST
      path:
        type: Exact
        value: /dog
